--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Sprint One</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_vendor_page">VendorPage</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_user_page">UserPage</string>
 </resources>
