--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_user_page">UserPage</string>
     <string name="title_activity_maps_compose">MapsCompose</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
